# zupit

./: Dockerfile  README.md  compose.yaml  docker-compose.yml  entrypoint.sh  init.sql  populate.sql  pyproject.toml  xpto.py
tests/: conftest.py  test_app.py  test_avalia.py  test_cars.py  test_database.py  test_db.py  test_drivers.py  test_travels.py  test_users.py
zupit/: app.py  database.py  schemas.py  utils.py
zupit/router/: avalia.py  cars.py  chats.py  driver.py  drivers.py  messages.py  offer.py  profile.py  rate.py  travels.py  users.py
zupit/schemas/: avalia.py  car.py  cars.py  chats.py  driver.py  rate.py  travels.py  user.py  users.py
zupit/service/: avalia_crud.py  cars_crud.py  chats_crud.py  driver_crud.py  drivers_crud.py  rate_crud.py  travels_crud.py  users_crud.py
zupit/static/: script.js  style.css
zupit/templates/: car.html  chats.html  create-driver.html  form.html  index.html  main.html  messages.html  navbar.html  offer.html  previous-travels.html  result-search-travel.html  search-travel.html  sign-in.html  sign-up.html  trip-participants.html
zupit/templates/offer/: fifth.html  first.html  fourth.html  second.html  third.html
zupit/templates/profile/: my-travels.html
zupit/templates/rate/: rate-driver.html  rate-passenger.html  view-ratings.html
