[project]
name = "zupit"
version = "0.1.0"
description = "App de agendamento de caronas"
authors = [
    {name = "azevedo", email = "azevedoantoniocicero@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "psycopg[binary]>=3.2.1",
    "jinja2>=3.1.4",
    "fastapi[standard]>=0.114.2",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.0",
    "email-validator>=2.2.0",
    "python-multipart>=0.0.9",
    "starlette>=0.38.2",
    "itsdangerous>=2.2.0",
    "sqlalchemy>=2.0.32",
    "googlemaps>=4.10.0",
    "websockets>=13.0.1",
    "opentelemetry-distro>=0.54b1",
    "opentelemetry-exporter-otlp>=1.33.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-sugar>=1.0.0",
    "ruff>=0.5.7",
    "testcontainers>=4.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-sugar>=1.0.0",
    "ruff>=0.5.7",
    "testcontainers>=4.8.0",
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ["PLR0913", "PLR0917"]

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.hatch.build.targets.wheel]
packages = ["zupit"]

